Aug 27 2013 <shlomif@shlomifish.org> (Shlomi Fish)

  Error.pm #0.17021
  - Fix for the format of the new Carp (in bleadperl)
    - https://rt.cpan.org/Ticket/Display.html?id=88137
    - Thanks to Zefram for the report and patch.

May 03 2013 <shlomif@shlomifish.org> (Shlomi Fish)

  Error.pm #0.17020
  - Correct typos.
    - https://rt.cpan.org/Ticket/Display.html?id=85023

Nov 19 2012 <shlomif@shlomifish.org> (Shlomi Fish)

  Error.pm #0.17019
  - Change to Shlomi Fish's new E-mail and web address.
  - Clarify the licence of lib/Error/Simple.pm .
    - https://rt.cpan.org/Ticket/Display.html?id=81277
    - Thanks to Marcela

May 08 2012 <shlomif@shlomifish.org> (Shlomi Fish)

  Error.pm #0.17018
  - Add a $VERSION variable for Error::Simple.
    - thanks to Kevin Dawson for the report.
  - Add scripts/bump-version-number.pl .
    - This can be used to bump the version numbers globally.

Feb 11 2012 <shlomif@shlomifish.org> (Shlomi Fish)

  - Bleadperl broke Error.pm's tests -
  	- https://rt.cpan.org/Ticket/Display.html?id=74770
    - Applied a patch to check for optional trailing periods.
	- Thanks to ANDK for the report and RURBAN for the patch

Dec 19 2009 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17016
  - Mentioned the lack of compatibility of "use Error qw(:try)" with Moose.
    Fixed: https://rt.cpan.org/Ticket/Display.html?id=46364
  - Added TryCatch and Try::Tiny to the "SEE ALSO".
  - Add the WARNING that this module is no longer recommended.

Jul 19 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17015
  - Added the "SEE ALSO" section to the Error.pm POD mentioning
  Exception::Class and Error::Exception.

May 24 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17014
  - Made Makefile.PL require perl-5.6.0 and above.

May 22 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17013
  - Now building only on perl-5.6.0 and above.
    - Added the line to the Build.PL

Jan 25 2008 <shlomif@iglu.org.il> (Shlomi Fish)
