@@ -1,4 +1,7 @@
-#!perl -T
+#!perl
+
+use strict;
+use warnings;
 
 use Test::More;
 eval "use Test::Pod 1.14";
