@@ -1,3 +1,8 @@
+Jan 29 2014 <shlomif@shlomifish.org> (Shlomi Fish)
+
+  Error.pm #0.17022
+  - Add "use warnings;" to everything (CPANTS Kwalitee).
+
 Aug 27 2013 <shlomif@shlomifish.org> (Shlomi Fish)
 
   Error.pm #0.17021
